doesn't work for some reason

--- a/Genetic/Genetic.vcxproj.filters
+++ b/Genetic/Genetic.vcxproj.filters
@@ -15,12 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="GeneticScheduler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header.h">
+    <ClInclude Include="GeneticScheduler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
