Final version (almost)

--- a/Genetic/Genetic.vcxproj
+++ b/Genetic/Genetic.vcxproj
@@ -113,9 +113,12 @@
   <ItemGroup>
     <ClCompile Include="GeneticScheduler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="tinyxml2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GeneticScheduler.h" />
+    <ClInclude Include="TestGenerator.h" />
+    <ClInclude Include="tinyxml2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
